created initial result impl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,19 @@
 cmake_minimum_required(VERSION 3.18.0)
 
+find_package(Git)
+
+if(NOT Git_FOUND)
+	message(FATAL_ERROR "could not find Git")
+endif()
+
+execute_process(COMMAND git describe --tags --abbrev=0
+		RESULT_VARIABLE  _RET
+		OUTPUT_VARIABLE  _TAG
+		OUTPUT_STRIP_TRAILING_WHITESPACE)
+
 project(cpp-result
 	LANGUAGES CXX
-	VERSION 0.0.0)
+	VERSION "${_TAG}")
 
-add_library(${PROJECT_NAME} INTERFACE)
-target_include_directories(${PROJECT_NAME} INTERFACE inc)
-target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_17)
-
-include(CTest)
-
-if(BUILD_TESTING)
-	add_executable(${PROJECT_NAME}-test test/main.cpp)
-	target_compile_features(${PROJECT_NAME}-test PUBLIC cxx_std_17)
-	target_link_libraries(${PROJECT_NAME}-test INTERFACE ${PROJECT_NAME})
-
-	add_test(NAME ${PROJECT_NAME}-test
-		 COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-test)
-
-	add_custom_target(check
-			  COMMAND ${CMAKE_CTEST_COMMAND} --output-on-error
-			  DEPENDS ${PROJECT_NAME}-test)
-endif()
+add_subdirectory(src)
+add_subdirectory(test)
