added fmap() & bind() little bit of work on unit tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,20 @@
 include(CTest)
 
-if (BUILD_TESTING)
-	add_executable(${PROJECT_NAME}-tests main.cpp)
-	target_compile_features(${PROJECT_NAME}-tests PUBLIC cxx_std_17)
-	target_link_libraries(${PROJECT_NAME}-tests PUBLIC ${PROJECT_NAME})
-
-	add_test(NAME ${PROJECT_NAME}-tests
-		 COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-tests)
+if(NOT BUILD_TESTING)
+	return()
 endif()
+
+file(GLOB ALL_SRC "*.cpp")
+
+foreach(PATH "${ALL_SRC}")
+	string(REGEX REPLACE ".*[\\/](.*)\.cpp" "\\1" PATH_NAME "${PATH}")
+	set(NAME "${PROJECT_NAME}-test-${PATH_NAME}")
+
+	add_executable(${NAME} ${PATH})
+	target_compile_features(${NAME} PUBLIC cxx_std_20)
+	target_include_directories(${NAME} PUBLIC inc)
+	target_link_libraries(${NAME} PUBLIC ${PROJECT_NAME})
+
+	add_test(NAME "${PATH_NAME}"
+		 COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${NAME})
+endforeach()
